--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
 @import "config";
 @import "menu";
-
 * {
   box-sizing: border-box;
 }
@@ -21,11 +20,9 @@ h2,
 h3 {
   margin: 0;
   font-weight: 400;
-
   &.lg-heading {
     font-size: 4rem;
   }
-
   &.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
@@ -49,22 +46,18 @@ header {
 }
 
 main {
-  padding: 4rem;
-  // height: 100%;
+  padding: 4rem; // height: 100%;
   min-height: calc(100vh - 60px);
   .icons {
     margin-top: 1rem;
-
     a {
       padding: 0.4rem;
-
       &:hover {
         color: $secondary-color;
         @include easeOut;
       }
     }
   }
-
   &#home {
     overflow: hidden;
     h1 {
@@ -76,23 +69,18 @@ main {
 .about-info {
   display: grid;
   grid-gap: 30px;
-  grid-template-areas:
-    "bioimage bio bio"
-    "job1 job2 job3";
+  grid-template-areas: "bioimage bio bio" "job1 job2 job3";
   grid-template-columns: repeat(3, 1fr);
-
   .bio-image {
     grid-area: bioimage;
     margin: auto;
     border-radius: 50%;
     border: $secondary-color 3px solid;
   }
-
   .bio {
     grid-area: bio;
     font-size: 1.5rem;
   }
-
   .job-1 {
     grid-area: job1;
   }
@@ -102,12 +90,51 @@ main {
   .job-3 {
     grid-area: job3;
   }
-
   .job {
     background: lighten($primary-color, 5);
     padding: 0.5rem;
     border-bottom: $secondary-color 5px solid;
   }
+}
+
+// Work/Projects
+.projects {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
+  img {
+    width: 100%;
+    border: 3px #fff solid;
+    &:hover {
+      opacity: 0.5;
+      border-color: $secondary-color;
+      @include easeOut;
+    }
+  }
+}
+
+//Button Styles
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
+  &:hover {
+    background: $secondary-color;
+    color: set-text-color($secondary-color);
+  }
+}
+
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 50);
+  color: #fff;
+}
+
+.btn-dark {
+  @extend .btn;
+  background: lighten($primary-color, 50);
+  color: #333;
 }
 
 #main-footer {
